name:                salt
version:             0.0
synopsis:            Cryptographic networking for Haskell
description:
  NaCl (pronounced \"salt\") is a safe, high-speed, easy to use
  cryptography library - the project was initiated
  by CACE (Computer Aided Cryptography Engineering,) and is currently
  lead by Dan J. Bernstein and Tanja Lange. It's designed to be
  considerably faster and easier to use (e.g. simple APIs, good
  selection of default primitives) than alternative crypto libraries
  like OpenSSL.
  .
  This package provides a high level interface to NaCl and all its
  basic APIs.
  .
  This package will take some time to build the first time you
  install it. It will build nacl (which can't be done directly
  by cabal) in the @./configure@ step, and put it in a known
  location under your @$HOME@ so cabal can link to it correctly
  later. You won't need to do this again unless the underlying
  version of NaCl changes.
  .
  The current version of NaCl used in this package is @20110221@. It
  is patched to include an optimized implementation of Ed25519 for the
  signature API and use it as the default primitive. It is up to 200x
  faster than the old edwards implementation, and will be the default
  signature primitive in the next version of NaCl.
  .
  See more details including documentation, test coverage reports,
  and benchmarks, here: <http://thoughtpolice.github.com/salt>
homepage:            http://thoughtpolice.github.com/salt
bug-reports:         http://github.com/thoughtpolice/salt/issues
license:             MIT
license-file:        LICENSE.txt
copyright:           Copyright (c) Austin Seipp 2011-2012
author:              Austin Seipp <mad.one@gmail.com>
maintainer:          Austin Seipp <mad.one@gmail.com>
category:            Cryptography, Networking
build-type:          Configure
cabal-version:       >=1.10
tested-with:         GHC==7.0.4,
                     GHC==7.2.1, GHC==7.2.2,
                     GHC==7.4.1,
                     GHC==7.5.*

extra-source-files:
  configure
  AUTHORS.txt
  bench/Bench.hs bench/makefile
  src/cbits/*.c
  examples/*.hs
  README.md
  tests/*.hs
  TODO
  -- good god
  src/cbits/nacl-20110221/PROTOTYPES.c
  src/cbits/nacl-20110221/okcompilers/archivers
  src/cbits/nacl-20110221/okcompilers/main.cpp
  src/cbits/nacl-20110221/okcompilers/c
  src/cbits/nacl-20110221/okcompilers/main.c
  src/cbits/nacl-20110221/okcompilers/do
  src/cbits/nacl-20110221/okcompilers/lib.c
  src/cbits/nacl-20110221/okcompilers/lib.cpp
  src/cbits/nacl-20110221/okcompilers/cpp
  src/cbits/nacl-20110221/okcompilers/abiname.c
  src/cbits/nacl-20110221/inttypes/crypto_uint32.c
  src/cbits/nacl-20110221/inttypes/unsigned.h
  src/cbits/nacl-20110221/inttypes/crypto_uint8.c
  src/cbits/nacl-20110221/inttypes/crypto_int8.c
  src/cbits/nacl-20110221/inttypes/crypto_int64.c
  src/cbits/nacl-20110221/inttypes/crypto_int16.c
  src/cbits/nacl-20110221/inttypes/do
  src/cbits/nacl-20110221/inttypes/crypto_uint64.c
  src/cbits/nacl-20110221/inttypes/crypto_int32.c
  src/cbits/nacl-20110221/inttypes/signed.h
  src/cbits/nacl-20110221/inttypes/crypto_uint16.c
  src/cbits/nacl-20110221/randombytes/devurandom.h
  src/cbits/nacl-20110221/randombytes/test.c
  src/cbits/nacl-20110221/randombytes/do
  src/cbits/nacl-20110221/randombytes/devurandom.c
  src/cbits/nacl-20110221/crypto_box/wrapper-box.cpp
  src/cbits/nacl-20110221/crypto_box/try.c
  src/cbits/nacl-20110221/crypto_box/wrapper-keypair.cpp
  src/cbits/nacl-20110221/crypto_box/measure.c
  src/cbits/nacl-20110221/crypto_box/curve25519xsalsa20poly1305/selected
  src/cbits/nacl-20110221/crypto_box/curve25519xsalsa20poly1305/checksum
  src/cbits/nacl-20110221/crypto_box/curve25519xsalsa20poly1305/ref/keypair.c
  src/cbits/nacl-20110221/crypto_box/curve25519xsalsa20poly1305/ref/box.c
  src/cbits/nacl-20110221/crypto_box/curve25519xsalsa20poly1305/ref/api.h
  src/cbits/nacl-20110221/crypto_box/curve25519xsalsa20poly1305/ref/before.c
  src/cbits/nacl-20110221/crypto_box/curve25519xsalsa20poly1305/ref/after.c
  src/cbits/nacl-20110221/crypto_box/curve25519xsalsa20poly1305/used
  src/cbits/nacl-20110221/crypto_box/wrapper-open.cpp
  src/cbits/nacl-20110221/measure-anything.c
  src/cbits/nacl-20110221/crypto_auth/try.c
  src/cbits/nacl-20110221/crypto_auth/wrapper-verify.cpp
  src/cbits/nacl-20110221/crypto_auth/wrapper-auth.cpp
  src/cbits/nacl-20110221/crypto_auth/hmacsha512256/selected
  src/cbits/nacl-20110221/crypto_auth/hmacsha512256/checksum
  src/cbits/nacl-20110221/crypto_auth/hmacsha512256/ref/verify.c
  src/cbits/nacl-20110221/crypto_auth/hmacsha512256/ref/hmac.c
  src/cbits/nacl-20110221/crypto_auth/hmacsha512256/ref/api.h
  src/cbits/nacl-20110221/crypto_auth/hmacsha512256/used
  src/cbits/nacl-20110221/crypto_auth/measure.c
  src/cbits/nacl-20110221/crypto_stream/try.c
  src/cbits/nacl-20110221/crypto_stream/salsa20/amd64_xmm6/stream.s
  src/cbits/nacl-20110221/crypto_stream/salsa20/amd64_xmm6/implementors
  src/cbits/nacl-20110221/crypto_stream/salsa20/amd64_xmm6/api.h
  src/cbits/nacl-20110221/crypto_stream/salsa20/checksum
  src/cbits/nacl-20110221/crypto_stream/salsa20/ref/implementors
  src/cbits/nacl-20110221/crypto_stream/salsa20/ref/xor.c
  src/cbits/nacl-20110221/crypto_stream/salsa20/ref/api.h
  src/cbits/nacl-20110221/crypto_stream/salsa20/ref/stream.c
  src/cbits/nacl-20110221/crypto_stream/salsa20/x86_xmm5/stream.s
  src/cbits/nacl-20110221/crypto_stream/salsa20/x86_xmm5/implementors
  src/cbits/nacl-20110221/crypto_stream/salsa20/x86_xmm5/api.h
  src/cbits/nacl-20110221/crypto_stream/salsa20/used
  src/cbits/nacl-20110221/crypto_stream/xsalsa20/selected
  src/cbits/nacl-20110221/crypto_stream/xsalsa20/checksum
  src/cbits/nacl-20110221/crypto_stream/xsalsa20/ref/implementors
  src/cbits/nacl-20110221/crypto_stream/xsalsa20/ref/xor.c
  src/cbits/nacl-20110221/crypto_stream/xsalsa20/ref/api.h
  src/cbits/nacl-20110221/crypto_stream/xsalsa20/ref/stream.c
  src/cbits/nacl-20110221/crypto_stream/xsalsa20/used
  src/cbits/nacl-20110221/crypto_stream/measure.c
  src/cbits/nacl-20110221/crypto_stream/wrapper-xor.cpp
  src/cbits/nacl-20110221/crypto_stream/wrapper-stream.cpp
  src/cbits/nacl-20110221/OPERATIONS
  src/cbits/nacl-20110221/crypto_scalarmult/wrapper-base.cpp
  src/cbits/nacl-20110221/crypto_scalarmult/try.c
  src/cbits/nacl-20110221/crypto_scalarmult/measure.c
  src/cbits/nacl-20110221/crypto_scalarmult/wrapper-mult.cpp
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/donna_c64/implementors
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/donna_c64/smult.c
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/donna_c64/api.h
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/donna_c64/base.c
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/athlon/fromdouble.s
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/athlon/mainloop.s
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/athlon/implementors
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/athlon/mult.s
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/athlon/init.s
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/athlon/smult.c
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/athlon/api.h
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/athlon/base.c
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/athlon/const.s
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/athlon/square.s
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/athlon/todouble.s
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/checksum
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/ref/implementors
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/ref/smult.c
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/ref/api.h
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/ref/base.c
  src/cbits/nacl-20110221/crypto_scalarmult/curve25519/used
  src/cbits/nacl-20110221/crypto_core/wrapper-empty.cpp
  src/cbits/nacl-20110221/crypto_core/hsalsa20/checksum
  src/cbits/nacl-20110221/crypto_core/hsalsa20/ref2/implementors
  src/cbits/nacl-20110221/crypto_core/hsalsa20/ref2/api.h
  src/cbits/nacl-20110221/crypto_core/hsalsa20/ref2/core.c
  src/cbits/nacl-20110221/crypto_core/hsalsa20/ref/implementors
  src/cbits/nacl-20110221/crypto_core/hsalsa20/ref/api.h
  src/cbits/nacl-20110221/crypto_core/hsalsa20/ref/core.c
  src/cbits/nacl-20110221/crypto_core/hsalsa20/used
  src/cbits/nacl-20110221/crypto_core/try.c
  src/cbits/nacl-20110221/crypto_core/salsa20/checksum
  src/cbits/nacl-20110221/crypto_core/salsa20/ref/implementors
  src/cbits/nacl-20110221/crypto_core/salsa20/ref/api.h
  src/cbits/nacl-20110221/crypto_core/salsa20/ref/core.c
  src/cbits/nacl-20110221/crypto_core/salsa20/used
  src/cbits/nacl-20110221/crypto_core/measure.c
  src/cbits/nacl-20110221/crypto_verify/16/checksum
  src/cbits/nacl-20110221/crypto_verify/16/ref/verify.c
  src/cbits/nacl-20110221/crypto_verify/16/ref/api.h
  src/cbits/nacl-20110221/crypto_verify/16/used
  src/cbits/nacl-20110221/crypto_verify/wrapper-empty.cpp
  src/cbits/nacl-20110221/crypto_verify/try.c
  src/cbits/nacl-20110221/crypto_verify/32/checksum
  src/cbits/nacl-20110221/crypto_verify/32/ref/verify.c
  src/cbits/nacl-20110221/crypto_verify/32/ref/api.h
  src/cbits/nacl-20110221/crypto_verify/32/used
  src/cbits/nacl-20110221/crypto_verify/measure.c
  src/cbits/nacl-20110221/crypto_onetimeauth/try.c
  src/cbits/nacl-20110221/crypto_onetimeauth/wrapper-verify.cpp
  src/cbits/nacl-20110221/crypto_onetimeauth/wrapper-auth.cpp
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/amd64/constants.s
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/amd64/verify.c
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/amd64/api.h
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/amd64/auth.s
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/selected
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/53/verify.c
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/53/api.h
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/53/auth.c
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/x86/constants.s
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/x86/verify.c
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/x86/api.h
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/x86/auth.s
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/checksum
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/ref/verify.c
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/ref/api.h
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/ref/auth.c
  src/cbits/nacl-20110221/crypto_onetimeauth/poly1305/used
  src/cbits/nacl-20110221/crypto_onetimeauth/measure.c
  src/cbits/nacl-20110221/do
  src/cbits/nacl-20110221/crypto_secretbox/wrapper-box.cpp
  src/cbits/nacl-20110221/crypto_secretbox/try.c
  src/cbits/nacl-20110221/crypto_secretbox/measure.c
  src/cbits/nacl-20110221/crypto_secretbox/wrapper-open.cpp
  src/cbits/nacl-20110221/crypto_secretbox/xsalsa20poly1305/selected
  src/cbits/nacl-20110221/crypto_secretbox/xsalsa20poly1305/checksum
  src/cbits/nacl-20110221/crypto_secretbox/xsalsa20poly1305/ref/box.c
  src/cbits/nacl-20110221/crypto_secretbox/xsalsa20poly1305/ref/api.h
  src/cbits/nacl-20110221/crypto_secretbox/xsalsa20poly1305/used
  src/cbits/nacl-20110221/crypto_hash/try.c
  src/cbits/nacl-20110221/crypto_hash/wrapper-hash.cpp
  src/cbits/nacl-20110221/crypto_hash/sha512/selected
  src/cbits/nacl-20110221/crypto_hash/sha512/checksum
  src/cbits/nacl-20110221/crypto_hash/sha512/ref/hash.c
  src/cbits/nacl-20110221/crypto_hash/sha512/ref/implementors
  src/cbits/nacl-20110221/crypto_hash/sha512/ref/api.h
  src/cbits/nacl-20110221/crypto_hash/sha512/used
  src/cbits/nacl-20110221/crypto_hash/sha256/checksum
  src/cbits/nacl-20110221/crypto_hash/sha256/ref/hash.c
  src/cbits/nacl-20110221/crypto_hash/sha256/ref/implementors
  src/cbits/nacl-20110221/crypto_hash/sha256/ref/api.h
  src/cbits/nacl-20110221/crypto_hash/sha256/used
  src/cbits/nacl-20110221/crypto_hash/measure.c
  src/cbits/nacl-20110221/cpucycles/ia64cpuinfo.c
  src/cbits/nacl-20110221/cpucycles/celllinux.c
  src/cbits/nacl-20110221/cpucycles/mips.h
  src/cbits/nacl-20110221/cpucycles/sparc32cpuinfo.c
  src/cbits/nacl-20110221/cpucycles/sparc32cpuinfo.h
  src/cbits/nacl-20110221/cpucycles/celllinux.h
  src/cbits/nacl-20110221/cpucycles/gettimeofday.h
  src/cbits/nacl-20110221/cpucycles/alpha.h
  src/cbits/nacl-20110221/cpucycles/monotonic.c
  src/cbits/nacl-20110221/cpucycles/sgi.c
  src/cbits/nacl-20110221/cpucycles/mips.c
  src/cbits/nacl-20110221/cpucycles/monotoniccpuinfo.h
  src/cbits/nacl-20110221/cpucycles/amd64cpuspeed.h
  src/cbits/nacl-20110221/cpucycles/amd64tscfreq.c
  src/cbits/nacl-20110221/cpucycles/gettimeofday.c
  src/cbits/nacl-20110221/cpucycles/x86tscfreq.c
  src/cbits/nacl-20110221/cpucycles/dev4ns.h
  src/cbits/nacl-20110221/cpucycles/alpha.c
  src/cbits/nacl-20110221/cpucycles/sparccpuinfo.h
  src/cbits/nacl-20110221/cpucycles/hppapstat.c
  src/cbits/nacl-20110221/cpucycles/x86cpuinfo.c
  src/cbits/nacl-20110221/cpucycles/x86estimate.c
  src/cbits/nacl-20110221/cpucycles/powerpccpuinfo.c
  src/cbits/nacl-20110221/cpucycles/x86estimate.h
  src/cbits/nacl-20110221/cpucycles/amd64tscfreq.h
  src/cbits/nacl-20110221/cpucycles/amd64cpuspeed.c
  src/cbits/nacl-20110221/cpucycles/test.c
  src/cbits/nacl-20110221/cpucycles/powerpcmacos.c
  src/cbits/nacl-20110221/cpucycles/x86cpuspeed.h
  src/cbits/nacl-20110221/cpucycles/powerpcmacos.h
  src/cbits/nacl-20110221/cpucycles/do
  src/cbits/nacl-20110221/cpucycles/ia64cpuinfo.h
  src/cbits/nacl-20110221/cpucycles/amd64cpuinfo.h
  src/cbits/nacl-20110221/cpucycles/powerpccpuinfo.h
  src/cbits/nacl-20110221/cpucycles/cortex.c
  src/cbits/nacl-20110221/cpucycles/x86cpuinfo.h
  src/cbits/nacl-20110221/cpucycles/amd64cpuinfo.c
  src/cbits/nacl-20110221/cpucycles/monotonic.h
  src/cbits/nacl-20110221/cpucycles/osfreq.c
  src/cbits/nacl-20110221/cpucycles/dev4ns.c
  src/cbits/nacl-20110221/cpucycles/cortex.h
  src/cbits/nacl-20110221/cpucycles/hppapstat.h
  src/cbits/nacl-20110221/cpucycles/sgi.h
  src/cbits/nacl-20110221/cpucycles/sparccpuinfo.c
  src/cbits/nacl-20110221/cpucycles/monotoniccpuinfo.c
  src/cbits/nacl-20110221/cpucycles/x86cpuspeed.c
  src/cbits/nacl-20110221/cpucycles/x86tscfreq.h
  src/cbits/nacl-20110221/try-anything.c
  src/cbits/nacl-20110221/PROTOTYPES.cpp
  src/cbits/nacl-20110221/crypto_hashblocks/wrapper-empty.cpp
  src/cbits/nacl-20110221/crypto_hashblocks/try.c
  src/cbits/nacl-20110221/crypto_hashblocks/sha512/inplace/implementors
  src/cbits/nacl-20110221/crypto_hashblocks/sha512/inplace/api.h
  src/cbits/nacl-20110221/crypto_hashblocks/sha512/inplace/blocks.c
  src/cbits/nacl-20110221/crypto_hashblocks/sha512/selected
  src/cbits/nacl-20110221/crypto_hashblocks/sha512/checksum
  src/cbits/nacl-20110221/crypto_hashblocks/sha512/ref/implementors
  src/cbits/nacl-20110221/crypto_hashblocks/sha512/ref/api.h
  src/cbits/nacl-20110221/crypto_hashblocks/sha512/ref/blocks.c
  src/cbits/nacl-20110221/crypto_hashblocks/sha512/used
  src/cbits/nacl-20110221/crypto_hashblocks/sha256/inplace/implementors
  src/cbits/nacl-20110221/crypto_hashblocks/sha256/inplace/api.h
  src/cbits/nacl-20110221/crypto_hashblocks/sha256/inplace/blocks.c
  src/cbits/nacl-20110221/crypto_hashblocks/sha256/checksum
  src/cbits/nacl-20110221/crypto_hashblocks/sha256/ref/implementors
  src/cbits/nacl-20110221/crypto_hashblocks/sha256/ref/api.h
  src/cbits/nacl-20110221/crypto_hashblocks/sha256/ref/blocks.c
  src/cbits/nacl-20110221/crypto_hashblocks/sha256/used
  src/cbits/nacl-20110221/crypto_hashblocks/measure.c
  src/cbits/nacl-20110221/MACROS
  src/cbits/nacl-20110221/cpuid/do
  src/cbits/nacl-20110221/cpuid/cpuid.c
  src/cbits/nacl-20110221/cpuid/unknown.c
  src/cbits/nacl-20110221/cpuid/cbytes.c
  src/cbits/nacl-20110221/cpuid/x86.c
  src/cbits/nacl-20110221/crypto_sign/try.c
  src/cbits/nacl-20110221/crypto_sign/wrapper-sign.cpp
  src/cbits/nacl-20110221/crypto_sign/wrapper-sign-open.cpp
  src/cbits/nacl-20110221/crypto_sign/wrapper-keypair.cpp
  src/cbits/nacl-20110221/crypto_sign/measure.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_sub.q
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_msub.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_invert.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/q2h.sh
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_sq.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_tobytes.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_precomp_0.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/pow225521.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/keypair.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/pow225521.q
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/sqrtm1.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_add.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_scalarmult_base.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_cmov.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_madd.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_madd.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/pow22523.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/d2.py
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_sub.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/sign.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_pow22523.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_frombytes.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/d.py
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_mul.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_msub.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_p2_dbl.q
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_add.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/base2.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_p2_dbl.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/base.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_p2_dbl.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/sqrtm1.py
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/sc_muladd.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_1.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_p1p1_to_p2.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/d.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/Makefile
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_tobytes.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/pow22523.q
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/base2.py
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_0.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/api.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_p1p1_to_p3.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_p3_dbl.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/d2.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_madd.q
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_p3_to_p2.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/sc.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/base.py
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_neg.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_add.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_p3_tobytes.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_msub.q
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_isnonzero.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_p3_to_cached.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_sub.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_copy.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_isnegative.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/fe_sq2.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/open.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_p2_0.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_add.q
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_double_scalarmult.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_p3_0.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_sub.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge_frombytes.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/sc_reduce.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref10/ge.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/designers
  src/cbits/nacl-20110221/crypto_sign/ed25519/selected
  src/cbits/nacl-20110221/crypto_sign/ed25519/description
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref/fe25519.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref/sc25519.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref/implementors
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref/ed25519.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref/fe25519.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref/sc25519.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref/ge25519_base.data
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref/ge25519.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref/api.h
  src/cbits/nacl-20110221/crypto_sign/ed25519/ref/ge25519.c
  src/cbits/nacl-20110221/crypto_sign/ed25519/used
  src/cbits/nacl-20110221/version

extra-tmp-files:
  salt.buildinfo
  
source-repository head
  type: git
  location: https://github.com/thoughtpolice/salt.git

library
  exposed-modules:
    Crypto.NaCl.Auth
    Crypto.NaCl.Auth.Auth
    Crypto.NaCl.Auth.OneTimeAuth
    Crypto.NaCl.Encrypt.PublicKey
    Crypto.NaCl.Encrypt.SecretKey
    Crypto.NaCl.Encrypt.Stream
    Crypto.NaCl.Hash
    Crypto.NaCl.Key
    Crypto.NaCl.Nonce
    Crypto.NaCl.Random
    Crypto.NaCl.Sign

  build-depends:
    base       >= 4,
    bytestring >= 0.9,
    tagged     >= 0.2

  hs-source-dirs: src
  c-sources:        
    src/cbits/glue.c
  extra-libraries:  nacl stdc++

  cc-options:       -Wall
  ghc-options:      -Wall -O2 -funbox-strict-fields
                    -fwarn-tabs

  default-extensions: CPP
  default-language:   Haskell2010

test-suite properties
  hs-source-dirs: tests
  main-is:        Properties.hs
  type:           exitcode-stdio-1.0

  build-depends:
    base           >= 4,
    bytestring     >= 0.9,
    tagged         >= 0.2,
    QuickCheck     >= 2.4,
    HUnit          >= 1.2,
    test-framework >= 0.5,
    test-framework-quickcheck2 >= 0.2,
    test-framework-hunit >= 0.2,
    salt

  ghc-options:      -Wall -fno-cse -fno-warn-orphans
                    -threaded -rtsopts
  default-language: Haskell2010
